--- a/src/components/Home/homepage-services/homeservices.css
+++ b/src/components/Home/homepage-services/homeservices.css
@@ -60,7 +60,7 @@ margin: 1em 0 2em;
     justify-content: center;
     align-items: center;
 
-    width: 1400px;
+    width: 100%;
     height: 575px;
 
     /* outline: solid slateblue; */
