--- a/src/components/Home/yoe/yoe.css
+++ b/src/components/Home/yoe/yoe.css
@@ -23,7 +23,7 @@
     gap: 5%;
 
     width: 80%;
-    height: 700px;
+    max-height: 700px;
 
     /* outline:solid green; */
 }
@@ -44,7 +44,7 @@
 
 .pic-grid {
     display: grid;
-    width: 600px;
+    max-width: 600px;
     height: 500px;
     gap: 20px;
     /* outline: dotted red; */
@@ -100,8 +100,8 @@
     justify-content: space-evenly;
     gap: 10%;
 
-    width: 700px;
-    height: 500px;
+    max-width: 700px;
+    min-height: 570px;
     /* outline: dashed yellow; */
 
     color: white;
@@ -226,4 +226,10 @@ div.description-container a > div {
     bottom: 0;
     user-select: none;
     pointer-events: none;
+}
+
+@media (max-width: 1000px) {
+    .center-container {
+        flex-direction: column;
+    }
 }
