--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,6 +1,6 @@
 .navbar {
     background-color: white;
-    z-index: 100;
+    /* z-index: 100; */
 
     justify-content: space-between;
     align-items: center;
@@ -9,15 +9,19 @@
     left: 0px;
     right: 0;
     width: 100%;
+    max-width: 100vw; /*temp until fix width in rest of page*/
+    
     position: fixed;
 
     /* outline: dotted red; */
 }
 .logo{
     width: auto;
+    /* max-width: 90%; */
     /* margin: 2px 10px; */
     /* padding:  0 3px; */
-    height: 70px;
+    max-height: 70px;
+    min-height: 50px;
     /* outline: dotted red; */
 
 }
@@ -37,13 +41,23 @@
 ul.links li {
     list-style: none;
     line-height: 0;
+    height: 40px;
+    /* width: 80px; */
+    /* background-color: red; */
+    justify-content: center;
+    align-items: center;
 }
 .link {
     margin: 0 50px 0 0;
     /* outline: dotted green; */
     
 }
-
+.burger{
+    
+    padding-right: 30px;
+    color: var(--primary-color);
+    display: none;
+}
 
 /* a inside ul's with links class */
 .navbar-btn{
@@ -68,4 +82,79 @@ ul.links li {
 }
 .contact-icon-navbar {
     margin-left: 5px;
+}
+
+.sidebar {
+    display: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    /* max-width: 25%; */
+    min-width: 10%;
+    /* width: 250px; */
+    z-index: 10;
+    border-radius: 20px 0 0 20px;
+    background-color: white;
+}
+.sidebar > ul {
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    width: 200px;
+    height: wrap;
+    
+    padding: 15px 0 0 0;
+}
+.sidebar ul > li {
+    width: 100%;
+    height: 50px;
+    /* padding: 10px; */
+    list-style-type: none;
+}
+.sidebar a {
+    padding: 0 0 0 25%;
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+
+    width: 100%;
+    height: 100%;
+    /* outline: solid pink; */
+}
+.sidebar-btn{
+    z-index: 1000;
+    color: rgb(255, 255, 255);
+    /* justify-content: center; */
+    align-items: center;
+    
+
+    width:fit-content;
+    white-space: nowrap;
+    
+    background-color: #133995;
+    border-radius: 50px;
+    border-color:transparent;
+
+    /* outline: thick solid pink; */
+}
+.sidebar li:last-child {
+        padding: 5px 15px;
+}
+
+@media (max-width: 1100px) {
+    .navbar-btn{
+        background-color: red;
+    }
+    .links{
+        display: none;
+        flex-direction: column;
+        
+    }
+    .burger{
+        display:block;
+    }
+    .sidebar {
+        /* display: block; */
+    }
 }
